完成基本计时功能

--- a/.gitignore
+++ b/.gitignore
@@ -8780,3 +8780,166 @@ node_modules/minipass-sized/LICENSE
 node_modules/minipass-sized/package-lock.json
 node_modules/minipass-sized/package.json
 node_modules/minipass-sized/README.md
+out/make/squirrel.windows/x64/RELEASES
+out/make/squirrel.windows/x64/tomatoclock-0.1.0 Setup.exe
+out/make/squirrel.windows/x64/tomatoclock-0.1.0-full.nupkg
+out/tomatoclock-win32-x64/chrome_100_percent.pak
+out/tomatoclock-win32-x64/chrome_200_percent.pak
+out/tomatoclock-win32-x64/d3dcompiler_47.dll
+out/tomatoclock-win32-x64/ffmpeg.dll
+out/tomatoclock-win32-x64/icudtl.dat
+out/tomatoclock-win32-x64/libEGL.dll
+out/tomatoclock-win32-x64/libGLESv2.dll
+out/tomatoclock-win32-x64/LICENSE
+out/tomatoclock-win32-x64/LICENSES.chromium.html
+out/tomatoclock-win32-x64/resources.pak
+out/tomatoclock-win32-x64/snapshot_blob.bin
+out/tomatoclock-win32-x64/Squirrel.exe
+out/tomatoclock-win32-x64/tomatoclock.exe
+out/tomatoclock-win32-x64/v8_context_snapshot.bin
+out/tomatoclock-win32-x64/version
+out/tomatoclock-win32-x64/vk_swiftshader_icd.json
+out/tomatoclock-win32-x64/vk_swiftshader.dll
+out/tomatoclock-win32-x64/vulkan-1.dll
+out/tomatoclock-win32-x64/locales/am.pak
+out/tomatoclock-win32-x64/locales/ar.pak
+out/tomatoclock-win32-x64/locales/bg.pak
+out/tomatoclock-win32-x64/locales/bn.pak
+out/tomatoclock-win32-x64/locales/ca.pak
+out/tomatoclock-win32-x64/locales/cs.pak
+out/tomatoclock-win32-x64/locales/da.pak
+out/tomatoclock-win32-x64/locales/de.pak
+out/tomatoclock-win32-x64/locales/el.pak
+out/tomatoclock-win32-x64/locales/en-GB.pak
+out/tomatoclock-win32-x64/locales/en-US.pak
+out/tomatoclock-win32-x64/locales/es-419.pak
+out/tomatoclock-win32-x64/locales/es.pak
+out/tomatoclock-win32-x64/locales/et.pak
+out/tomatoclock-win32-x64/locales/fa.pak
+out/tomatoclock-win32-x64/locales/fi.pak
+out/tomatoclock-win32-x64/locales/fil.pak
+out/tomatoclock-win32-x64/locales/fr.pak
+out/tomatoclock-win32-x64/locales/gu.pak
+out/tomatoclock-win32-x64/locales/he.pak
+out/tomatoclock-win32-x64/locales/hi.pak
+out/tomatoclock-win32-x64/locales/hr.pak
+out/tomatoclock-win32-x64/locales/hu.pak
+out/tomatoclock-win32-x64/locales/id.pak
+out/tomatoclock-win32-x64/locales/it.pak
+out/tomatoclock-win32-x64/locales/ja.pak
+out/tomatoclock-win32-x64/locales/kn.pak
+out/tomatoclock-win32-x64/locales/ko.pak
+out/tomatoclock-win32-x64/locales/lt.pak
+out/tomatoclock-win32-x64/locales/lv.pak
+out/tomatoclock-win32-x64/locales/ml.pak
+out/tomatoclock-win32-x64/locales/mr.pak
+out/tomatoclock-win32-x64/locales/ms.pak
+out/tomatoclock-win32-x64/locales/nb.pak
+out/tomatoclock-win32-x64/locales/nl.pak
+out/tomatoclock-win32-x64/locales/pl.pak
+out/tomatoclock-win32-x64/locales/pt-BR.pak
+out/tomatoclock-win32-x64/locales/pt-PT.pak
+out/tomatoclock-win32-x64/locales/ro.pak
+out/tomatoclock-win32-x64/locales/ru.pak
+out/tomatoclock-win32-x64/locales/sk.pak
+out/tomatoclock-win32-x64/locales/sl.pak
+out/tomatoclock-win32-x64/locales/sr.pak
+out/tomatoclock-win32-x64/locales/sv.pak
+out/tomatoclock-win32-x64/locales/sw.pak
+out/tomatoclock-win32-x64/locales/ta.pak
+out/tomatoclock-win32-x64/locales/te.pak
+out/tomatoclock-win32-x64/locales/th.pak
+out/tomatoclock-win32-x64/locales/tr.pak
+out/tomatoclock-win32-x64/locales/uk.pak
+out/tomatoclock-win32-x64/locales/vi.pak
+out/tomatoclock-win32-x64/locales/zh-CN.pak
+out/tomatoclock-win32-x64/locales/zh-TW.pak
+out/tomatoclock-win32-x64/resources/app/.gitignore
+out/tomatoclock-win32-x64/resources/app/main.js
+out/tomatoclock-win32-x64/resources/app/package.json
+out/tomatoclock-win32-x64/resources/app/README.md
+out/tomatoclock-win32-x64/resources/app/src/1.mp3
+out/tomatoclock-win32-x64/resources/app/src/2.mp3
+out/tomatoclock-win32-x64/resources/app/src/3.mp3
+out/tomatoclock-win32-x64/resources/app/src/clock.css
+out/tomatoclock-win32-x64/resources/app/src/clock.html
+out/tomatoclock-win32-x64/resources/app/src/clock.js
+out/tomatoclock-win32-x64/resources/app/src/preload.js
+out/tomatoclock-win32-x64/swiftshader/libEGL.dll
+out/tomatoclock-win32-x64/swiftshader/libGLESv2.dll
+node_modules/electron-winstaller/vendor/Squirrel-Releasify.log
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0.zip
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/chrome_100_percent.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/chrome_200_percent.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/d3dcompiler_47.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/ffmpeg.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/icudtl.dat
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/libEGL.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/libGLESv2.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/LICENSE
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/LICENSES.chromium.html
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/snapshot_blob.bin
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/tomatoclock.exe
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/v8_context_snapshot.bin
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/version
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/vk_swiftshader_icd.json
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/vk_swiftshader.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/vulkan-1.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/am.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ar.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/bg.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/bn.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ca.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/cs.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/da.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/de.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/el.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/en-GB.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/en-US.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/es-419.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/es.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/et.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/fa.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/fi.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/fil.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/fr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/gu.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/he.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/hi.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/hr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/hu.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/id.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/it.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ja.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/kn.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ko.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/lt.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/lv.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ml.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/mr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ms.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/nb.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/nl.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/pl.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/pt-BR.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/pt-PT.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ro.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ru.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/sk.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/sl.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/sr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/sv.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/sw.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/ta.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/te.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/th.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/tr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/uk.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/vi.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/zh-CN.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/locales/zh-TW.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources/app.asar
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/swiftshader/libEGL.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/swiftshader/libGLESv2.dll
+out/tomatoclock-win32-x64/resources/app.asar
