--- a/.gitignore
+++ b/.gitignore
@@ -8943,3 +8943,90 @@ out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources/app.asar
 out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/swiftshader/libEGL.dll
 out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/swiftshader/libGLESv2.dll
 out/tomatoclock-win32-x64/resources/app.asar
+src/vueglobal.js
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources/break.mp3
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources/pause.mp3
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources/setting.json
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.1.0/resources/work.mp3
+out/tomatoclock-win32-x64/resources/break.mp3
+out/tomatoclock-win32-x64/resources/pause.mp3
+out/tomatoclock-win32-x64/resources/setting.json
+out/tomatoclock-win32-x64/resources/work.mp3
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0.zip
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/chrome_100_percent.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/chrome_200_percent.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/d3dcompiler_47.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/ffmpeg.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/icudtl.dat
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/libEGL.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/libGLESv2.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/LICENSE
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/LICENSES.chromium.html
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/resources.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/snapshot_blob.bin
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/tomatoclock.exe
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/v8_context_snapshot.bin
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/version
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/vk_swiftshader_icd.json
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/vk_swiftshader.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/vulkan-1.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/am.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ar.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/bg.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/bn.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ca.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/cs.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/da.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/de.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/el.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/en-GB.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/en-US.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/es-419.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/es.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/et.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/fa.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/fi.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/fil.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/fr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/gu.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/he.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/hi.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/hr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/hu.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/id.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/it.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ja.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/kn.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ko.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/lt.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/lv.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ml.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/mr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ms.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/nb.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/nl.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/pl.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/pt-BR.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/pt-PT.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ro.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ru.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/sk.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/sl.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/sr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/sv.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/sw.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/ta.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/te.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/th.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/tr.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/uk.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/vi.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/zh-CN.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/locales/zh-TW.pak
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/resources/app.asar
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/resources/break.mp3
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/resources/pause.mp3
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/resources/setting.json
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/resources/work.mp3
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/swiftshader/libEGL.dll
+out/make/zip/win32/x64/tomatoclock-win32-x64-0.8.0/swiftshader/libGLESv2.dll
