--- a/package.json
+++ b/package.json
@@ -1,44 +1,20 @@
 {
-  "name": "tomatoclock",
-  "productName": "tomatoclock",
-  "version": "1.0.0",
-  "description": "Tomato Clock for Work",
-  "main": "main.js",
+  "name": "tuari_tomatoclock",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
-  },
-  "keywords": ["tomatoclock"],
-  "author": "ShiTuNiao",
-  "license": "MIT",
-  "config": {
-    "forge": {
-      "packagerConfig": {
-        "extraResource":["./src/work.mp3","./src/break.mp3","./src/pause.mp3","./src/setting.json"],
-        "asar":true,
-        "overwrite":true,
-        "junk":true,
-        "icon":"./src/icon.ico"
-      },
-      "makers":[
-        {
-        "name": "@electron-forge/maker-zip"
-      }
-    ]
-    }
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "@tauri-apps/api": "^1.0.0-rc.1",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.63",
-    "@electron-forge/maker-deb": "^6.0.0-beta.63",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
-    "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "electron": "17.0.0"
+    "@tauri-apps/cli": "^1.0.0-rc.5",
+    "@vitejs/plugin-vue": "^2.2.0",
+    "vite": "^2.8.0"
   }
 }
